Update nvim, wezterm, kitty, tmux configs

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,7 @@ set -g @tpm_plugins '          \
    MunifTanjim/tmux-mode-indicator   \
    xamut/tmux-network-bandwidth \
  '
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 # unbind C-b
 # set-option -g prefix C-a
