--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,16 +3,17 @@ include themes/catppuccin/frappe.conf
 background_opacity 1.00
 
 # Fonts
-# font_family      Martian Mono
 font_family      JetBrains Mono
-# font_family      Fira Code
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+# bold_font        auto
+# italic_font      auto
+# bold_italic_font auto
 
 # disable_ligatures always
 
 font_size       16.0
+
+# Nerd Fonts v3.2.0
+symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b1,U+e700-U+e7c5,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f372,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font Mono
 
 # line height
 adjust_line_height 6
@@ -24,7 +25,7 @@ adjust_column_width 0
 hide_window_decorations titlebar-only 
 
 # Draw an extra border around the font with the given width
-macos_thicken_font 0.8
+macos_thicken_font 0.7
 
 # Do not show the window title in the window or menubar
 macos_show_window_title_in none
